remove dead code. Fix width bug, no more horizontal scroll bar. Revamped.

--- a/under/src/components/coin-page/CoinPageGlobal.css
+++ b/under/src/components/coin-page/CoinPageGlobal.css
@@ -1,21 +1,22 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    /* align-items: baseline; */
     justify-content: center;
-    /* margin-top: 50%; */
 }
 
-/* .left-column {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    padding: 20px;
-} */
+.left-column {
+    width: 1425px;
+    height: 1300px;
+}
 
 .right-column {
     display: flex;
     flex-direction: row;
     flex: 1;
-    padding: 20px;
+    padding-top: 20px;
+    align-items: center;
+}
+
+select {
+    width: 50px;
 }
