--- a/under/src/components/coin-page/NewsSection/NewsSection.css
+++ b/under/src/components/coin-page/NewsSection/NewsSection.css
@@ -1,6 +1,4 @@
 .news-section {
-    padding: 20px;
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     background-color: beige;
