--- a/under/src/components/landing-page/Footer/Footer.css
+++ b/under/src/components/landing-page/Footer/Footer.css
@@ -48,7 +48,7 @@
 }
 
 .newsletter-form input {
-    width: 70%;
+    width: 60%;
     padding: 10px;
     border: none;
     border-radius: 5px 0 0 5px;
